# Packets

./: Cargo.toml  LICENSE  README.md  temp.txt
codegen/: main.py  parse.py  tokenize.py  types.py
codegen/parsers/: base.py  enum.py  types.py
codegen/scrapped/: main.py
codegen/scrapped/parsers/: __init__.py  types.py
examples/: example.rs
spec/: 1.7.2.specmc  1_7_2.specmc  versions.temp
specmc-protocol/: Cargo.toml
specmc-protocol-codegen/: Cargo.toml
specmc-protocol-codegen/src/: main.rs  parse.rs
specmc-protocol/macros/: Cargo.toml
specmc-protocol/macros/src/: lib.rs
specmc-protocol/src/: main.rs  parse.rs  tokenize.rs
src/: base.rs  enums.rs  lib.rs  packets.rs  spec.rs  types.rs
versions/: 1.7.2.specmc
