[package]
name = "specmc-protocol"
version = "0.1.4"
authors = ["TheAIguy_"]
edition = "2021"
description = "A library for parsing Minecraft protocol specification."
repository = "https://github.com/SpecMC/Protocol"
license = "MIT"

[dependencies]
specmc-base = "*"
strtoint = "0.1.0"

[features]
spec = []
1_7_2 = ["spec"]
